[gd_scene load_steps=7 format=3 uid="uid://bh8xqox45d4mh"]

[ext_resource type="Script" uid="uid://duypox2o604n8" path="res://scripts/p_bullet.gd" id="1_oosud"]
[ext_resource type="AudioStream" uid="uid://bxvpdvp8igso3" path="res://audio/shoot-5-102360.mp3" id="2_pgmnd"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wfge4"]
albedo_color = Color(1, 0, 0, 1)
emission_enabled = true
emission = Color(1, 0, 0, 1)
rim_enabled = true

[sub_resource type="CylinderMesh" id="CylinderMesh_oosud"]
material = SubResource("StandardMaterial3D_wfge4")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pgmnd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pheql"]

[node name="Pbullet" type="CharacterBody3D"]
script = ExtResource("1_oosud")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_oosud")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 1.50996e-07, 0, -1.50996e-07, -1, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_pgmnd")

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_pgmnd")
autoplay = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.01

[node name="Bullet_area" type="Area3D" parent="."]
transform = Transform3D(1.12231, 0, 0, 0, 1.08965, 0, 0, 0, 1.12115, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bullet_area"]
shape = SubResource("CylinderShape3D_pheql")

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="body_entered" from="Bullet_area" to="." method="_on_bullet_area_body_entered"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
